# loony-axum-postgres

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  Readme.md  docker-compose.yml  dump.rdb  run.sh  test.js
.local/: localhost-key.pem  localhost.crt  localhost.key  localhost.pem
config/: log4rs.yaml
db/: app.md  connect.sh
db/postgres/: Readme.md  all.sql  all_index.sql  basic.sql  blog.sql  book.sql  categories.sql  create_tables.sh  create_user.sh  credentials.sql  deploy.sh  deploy_native_app.sh  drop.sh  drop.sql  drop_all_tables.sql  exec.sh  postgres.sh  tags.sql  user.sql
db/redis/: index.md
db/scylladb/: blog.cql  book.cql  categories.cql  comments.cql  create_all_tables.cql  scylladb.md  session.cql  truncate.cql  types.txt  user.cql  userbooksettings.cql
docs/: api-reference.md  book-upload.md  http-content-types.md  http.md  image-upload-prerequisites.md  issues.md  loony-s3-integration.md  loony_db.md  permissions.md  post_recommendation.md  postgres_datatypes.md  protocol.md  search.md  security_assessment copy.md
docs/scaling/: 01.md  02.md
scripts/: clean_folders.sh  create_tables.sh  deploy.sh  drop.sh  local_deploy.sh  run.sh  seed_dev.sh  test_api.sh  test_apis.sh
scripts/pg/: deploy.sh  drop.sh
src/: auth.rs  axum_server_main.rs  config.rs  error.rs  init.rs  main.rs  query.rs  route.rs  test.rs  tracing_setup.rs
src/auth/: login.rs  mod.rs  utils.rs
src/blog/: controller.rs  delete.rs  get.rs  mod.rs  model.rs  utils.rs
src/blognode/: mod.rs  read.rs
src/book/: controller.rs  create.rs  delete.rs  edit.rs  get.rs  mod.rs  model.rs  upload.rs  utils.rs
src/booknode/: read.rs
src/connections/: cors.rs  mod.rs  pg.rs  session.rs
src/credentials/: mod.rs
src/file/: image.note.md  mod.rs  s3_client.rs
src/likes/: tag.rs
src/mail/: mod.rs
src/middleware/: mod.rs
src/query/: blog.rs  book.rs  mod.rs
src/search/: mod.rs
src/traits/: mod.rs
src/types/: mod.rs
src/user/: mod.rs
src/utils/: data.rs  doc.rs  mod.rs  query.rs  response.rs
