[package]
name = "loony"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
bb8 = "0.7.1"
bb8-postgres = "0.7.0"
bb8-redis = "0.14.0"
tokio = { version = "1.0", features = ["full"] }
tokio-postgres = "0.7.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
redis = "0.24.0"
tower-http = { version="0.5.2", features = ["cors"]}
argon2 = "0.5.3"
tower-sessions = "0.10.0"
tower-sessions-redis-store = "0.10.0"
time = "0.3.34"